--- a/.github/workflows/video_generator.yml
+++ b/.github/workflows/video_generator.yml
@@ -5,7 +5,7 @@ on:
   repository_dispatch:
     types: [generate-video]
   workflow_dispatch:
-
+  
 jobs:
   build-and-run:
     runs-on: ubuntu-latest
@@ -36,10 +36,10 @@ jobs:
       - name: Run Python script
         id: run_script
         env:
-          # 我们只需要传递这两个环境变量
           MODELSCOPE_API_KEY: ${{ secrets.MODELSCOPE_API_KEY }}
-          CUSTOM_TEXT: ${{ github.event.client_payload.text }}
-          # GITHUB_OUTPUT 是一个特殊的文件路径，用于设置步骤的输出
+          # 【核心修改】从 client_payload 中读取 Jichuang_Content 变量
+          # 并将其赋值给 CUSTOM_TEXT 环境变量，供 Python 脚本使用
+          CUSTOM_TEXT: ${{ github.event.client_payload.Jichuang_Content }}
           GITHUB_OUTPUT: ${{ steps.run_script.outputs.task_name }}
         run: python run_automation.py
 
